fix header text visibility

--- a/Fronted/src/component/Header/Header.css
+++ b/Fronted/src/component/Header/Header.css
@@ -6,45 +6,35 @@
     position: relative;
 }
 
+.header{
+    height: 400px;
+    margin: 30px auto;
+    background: url("./header_img.png") no-repeat;
+    background-size: cover;
+    background-position: center;
+    position: relative;
+}
+
 .header-contents{
     position: absolute;
     display: flex;
-    flex-direction:column;
-    align-items:start;
-    gap: 1.5vw;
+    flex-direction: column;
+    align-items: start;
+    gap: 15px;
     max-width: 50%;
-    bottom: 10%;
-    left: 6vw;
-    animation: fadeIn 3s;
-        z-index: 2; 
-}
-
-.header::after {
-    content: "";
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-
-    background: rgba(0, 0, 0, 0.4);  /* dark overlay */
+    bottom: 40px;
+    left: 40px;
     z-index: 1;
 }
 
-.header {
-    position: relative;   /* ✅ must */
-}
-
 .header-contents h2{
-    font-weight: 500;
     color: white;
-    font-size:max(4.5vw,22px) ;
 }
 
 .header-contents p{
     color: white;
-    font-size: 1vw;
 }
+
 
 .header-contents button{
     border: none;
